2011-04-22  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        Rounded corners don't looks smooth when background-image is a gradient
        https://bugs.webkit.org/show_bug.cgi?id=59213

        Add the "shrink background" behavior to the slow background
        drawing code path.

        Test: fast/backgrounds/gradient-background-leakage.html

        * rendering/RenderBoxModelObject.cpp:
        (WebCore::backgroundRectAdjustedForBleedAvoidance):
        Utility function that returns a shrunk border rect based
        on the context scale.
        (WebCore::RenderBoxModelObject::paintFillLayerExtended):
        Use backgroundRectAdjustedForBleedAvoidance() in both the fast
        and slow paths.

Canonical link: https://commits.webkit.org/74397@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84664 268f45cc-cd09-0410-ab3c-d52691b4dbfc